force-app/main/default/objects/Knowledge_Article_Keyword_Replacement__mdt/Knowledge_Article_Keyword_Replacement__mdt.object-meta.xml
<CustomObject>
    <description>Automagically replaces known-bad keywords with correct ones.</description>
    <label>Knowledge Article Keyword Replacement</label>
    <pluralLabel>Knowledge Article Keyword Replacements</pluralLabel>
</CustomObject>