force-app/main/default/objects/Knowledge_Article_Keyword_Replacement__mdt/fields/New_Keyword__c.field-meta.xml
<CustomField>
    <fullName>New_Keyword__c</fullName>
    <label>New Keyword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>