force-app/main/default/objects/Knowledge_Article_Keyword_Replacement__mdt/fields/Old_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Old_Keyword__c</fullName>
    <label>Old Keyword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>