force-app/main/default/objects/Knowledge_Article_Keyword_Replacement__mdt/fields/Replacement_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the "replacement" record should be considered active/enabled.</description>
    <label>Replacement Enabled</label>
    <type>Checkbox</type>
</CustomField>