force-app/main/default/objects/Knowledge_Article_Keyword_Replacement__mdt/listViews/All_Expanded.listView-meta.xml
<ListView>
    <fullName>All_Expanded</fullName>
    <columns>Replacement_Enabled__c</columns>
    <columns>Old_Keyword__c</columns>
    <columns>New_Keyword__c</columns>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>All (Expanded)</label>
</ListView>